Fix leak detector in web_tests

- Wait for about:blank to commit before sending
  ShellViewHostMsg_ResetDone. This ensures clean environment,
  which is especially important for leak detection.
- Do not expect about:blank in BlinkTestController, because
  browser might not know that we committed about:blank just yet.

Bug: 918182
Change-Id: Ia399fad0aeaf8c7a641309dfe9c6827fdc5806b4
Reviewed-on: https://chromium-review.googlesource.com/c/1409521
Commit-Queue: Dmitry Gozman <dgozman@chromium.org>
Reviewed-by: Jeremy Roman <jbroman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624295}
Former-commit-id: 8ba6dab66b3c265c3800d112db5d337bf40e2f62